# code_review_tune

./: .gitignore  MODEL_CARD.md  README.md  prd.md  pyproject.toml  requirements.txt
dataset/: analysis.ipynb  analysis.md
dataset/python_subset/: python_reviews_test.parquet  python_reviews_validation.parquet
docs/: training-estimation.md
scripts/: analyze_token_lengths.py  config.py  finetune_qwen.py  prepare_data.py  push_to_hub.py  save_from_checkpoint.py  test_from_hub.py  test_inference.py  test_model.py
